# monsoon

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
allanime/: Cargo.toml
allanime/src/: lib.rs
app/: Cargo.toml
app/src/: anilist.rs  db.rs  discord.rs  lib.rs  media.rs  player.rs  show.rs  source.rs  util.rs
app/src/media/: torrent.rs
app/src/source/: allanime.rs  nyaa.rs
helpers/: Cargo.toml
helpers/src/: lib.rs  reveal.rs  sizes.rs  subdivision.rs
nyaa/: Cargo.toml
nyaa/src/: lib.rs
rqstream/: Cargo.toml
rqstream/src/: lib.rs
rqstream/tests/: stream.rs
syncplay/: Cargo.toml
syncplay/src/: lib.rs  proto.rs
ui/: Cargo.toml
ui/src/: anilist.rs  db.rs  discord.rs  ext.rs  lib.rs  list.rs  main.rs  media.rs  nyaa.rs  player.rs  show.rs  source.rs  style.rs  util.rs
ui/src/media/: torrent.rs  url.rs
ui/src/source/: nyaa.rs
