[package]
name = "monsoon"
version = "0.1.0"
edition = "2024"

[dependencies]
app.workspace = true
helpers.workspace = true
iced = { git = "https://github.com/iced-rs/iced", rev = "8bfd099c5929d927a3fdde666d4c645d0bd83cb7", features = [
    "tokio",
    "image",
] }
itertools = "0.14.0"
crossbeam-utils = "0.8.21"
